src/ordt/parse/jspec/JSpecParser.java
// Generated from /Users/snellenbach/git/open-register-design-tool/src/ordt/parse/grammars/JSpec.g4 by ANTLR 4.5.1
package ordt.parse.jspec;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class JSpecParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, T__68=69, T__69=70, T__70=71, T__71=72, T__72=73, 
		T__73=74, T__74=75, T__75=76, T__76=77, T__77=78, T__78=79, WS=80, SL_COMMENT=81, 
		ML_COMMENT=82, ID=83, USER_PARAMETER=84, NUM=85, JSTR=86, STR=87, LJQUOTE=88, 
		RJQUOTE=89, LSHIFT=90, RSHIFT=91, LBRACE=92, RBRACE=93, LSQ=94, RSQ=95, 
		LPAREN=96, RPAREN=97, AT=98, OR=99, AND=100, SEMI=101, COLON=102, COMMA=103, 
		DOT=104, STAR=105, EQ=106, PLUS=107, MINUS=108, DIV=109, EXP=110, DOLLAR=111;
	public static final int
		RULE_root = 0, RULE_num_constant_def = 1, RULE_integer_constant_assign = 2, 
		RULE_width_constant_assign = 3, RULE_string_constant_def = 4, RULE_bracket_pair = 5, 
		RULE_type_definition = 6, RULE_param_type_definition = 7, RULE_enum_field_def = 8, 
		RULE_enum_value_assign = 9, RULE_transaction_def = 10, RULE_value_assign = 11, 
		RULE_typedef_instance = 12, RULE_param_block = 13, RULE_assign_parameter = 14, 
		RULE_defined_attribute = 15, RULE_defined_attribute_set = 16, RULE_register_set_def = 17, 
		RULE_register_def = 18, RULE_field_def = 19, RULE_field_set_def = 20, 
		RULE_int_field_def = 21, RULE_nop_field_def = 22, RULE_test_group_def = 23, 
		RULE_array = 24, RULE_num_expression = 25, RULE_id = 26, RULE_jstr = 27, 
		RULE_str = 28;
	public static final String[] ruleNames = {
		"root", "num_constant_def", "integer_constant_assign", "width_constant_assign", 
		"string_constant_def", "bracket_pair", "type_definition", "param_type_definition", 
		"enum_field_def", "enum_value_assign", "transaction_def", "value_assign", 
		"typedef_instance", "param_block", "assign_parameter", "defined_attribute", 
		"defined_attribute_set", "register_set_def", "register_def", "field_def", 
		"field_set_def", "int_field_def", "nop_field_def", "test_group_def", "array", 
		"num_expression", "id", "jstr", "str"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'constant'", "'integer'", "'enum'", "'typedef'", "'param'", "'string'", 
		"'boolean'", "'transaction'", "'access_mode'", "'address_alignment'", 
		"'addr_decode_allow_case'", "'addr_decode_allow_x'", "'addr_decode_instances'", 
		"'addr_decode_fixed_width'", "'addr_decode_lsb'", "'addr_decode_msb'", 
		"'anonymous'", "'attributes'", "'autogen'", "'category'", "'description'", 
		"'macro_name'", "'macro_mode'", "'operational_access_mode'", "'overlay'", 
		"'overlay_tag'", "'overlay_tag_width'", "'pack_msb'", "'pad_msb'", "'register_width'", 
		"'register_set_size'", "'sub_category'", "'superset_check'", "'unknown'", 
		"'true'", "'false'", "'True'", "'False'", "'TRUE'", "'FALSE'", "'READ_WRITE'", 
		"'READ_ONLY'", "'READ_TO_CLEAR'", "'CLEAR_ON_READ'", "'WRITE_ONLY'", "'WRITE_ONE_TO_CLEAR'", 
		"'WRITE_ONE_TO_SET'", "'DIAGNOSTIC'", "'ERROR_COUNTER'", "'STAT_COUNTER'", 
		"'CONSTRAINED_CONFIG'", "'DYNAMIC_CONFIG'", "'STATIC_CONFIG'", "'INTERRUPT'", 
		"'DEBUG'", "'INFO'", "'CGATE_UNSAFE'", "'FATAL'", "'MAJOR'", "'STATE'", 
		"'MINOR_RECOVERABLE'", "'MINOR_TRANSIENT'", "'NOEXPORT'", "'JS_ATTRIB_INT_STATUS'", 
		"'JS_ATTRIB_DO_NOT_TEST'", "'JS_ATTRIB_TEST_ACCESS_ONLY'", "'JS_ATTRIB_VOLATILE'", 
		"'JS_ATTRIB_EXTERNAL_MEMORY'", "'SKIP_CHILDREN'", "'SKIP_ADDRESS'", "'SKIP_REGISTER_SET_SIZE'", 
		"'MANUAL'", "'STANDARD'", "'register_set'", "'register'", "'field_set'", 
		"'nop'", "'test_group'", "'WIDTH'", null, null, null, null, "'XUSER_PARAMETERX'", 
		null, null, null, "'\"{'", "'}\"'", "'<<'", "'>>'", "'{'", "'}'", "'['", 
		"']'", "'('", "')'", "'@'", "'|'", "'&'", "';'", "':'", "','", "'.'", 
		"'*'", "'='", "'+'", "'-'", "'/'", "'^'", "'$'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, "WS", "SL_COMMENT", "ML_COMMENT", 
		"ID", "USER_PARAMETER", "NUM", "JSTR", "STR", "LJQUOTE", "RJQUOTE", "LSHIFT", 
		"RSHIFT", "LBRACE", "RBRACE", "LSQ", "RSQ", "LPAREN", "RPAREN", "AT", 
		"OR", "AND", "SEMI", "COLON", "COMMA", "DOT", "STAR", "EQ", "PLUS", "MINUS", 
		"DIV", "EXP", "DOLLAR"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "JSpec.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public JSpecParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class RootContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(JSpecParser.EOF, 0); }
		public List<Num_constant_defContext> num_constant_def() {
			return getRuleContexts(Num_constant_defContext.class);
		}
		public Num_constant_defContext num_constant_def(int i) {
			return getRuleContext(Num_constant_defContext.class,i);
		}
		public List<String_constant_defContext> string_constant_def() {
			return getRuleContexts(String_constant_defContext.class);
		}
		public String_constant_defContext string_constant_def(int i) {
			return getRuleContext(String_constant_defContext.class,i);
		}
		public List<Type_definitionContext> type_definition() {
			return getRuleContexts(Type_definitionContext.class);
		}
		public Type_definitionContext type_definition(int i) {
			return getRuleContext(Type_definitionContext.class,i);
		}
		public List<Param_type_definitionContext> param_type_definition() {
			return getRuleContexts(Param_type_definitionContext.class);
		}
		public Param_type_definitionContext param_type_definition(int i) {
			return getRuleContext(Param_type_definitionContext.class,i);
		}
		public List<Typedef_instanceContext> typedef_instance() {
			return getRuleContexts(Typedef_instanceContext.class);
		}
		public Typedef_instanceContext typedef_instance(int i) {
			return getRuleContext(Typedef_instanceContext.class,i);
		}
		public List<Register_set_defContext> register_set_def() {
			return getRuleContexts(Register_set_defContext.class);
		}
		public Register_set_defContext register_set_def(int i) {
			return getRuleContext(Register_set_defContext.class,i);
		}
		public RootContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_root; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSpecListener ) ((JSpecListener)listener).enterRoot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSpecListener ) ((JSpecListener)listener).exitRoot(this);
		}
	}

	public final RootContext root() throws RecognitionException {
		RootContext _localctx = new RootContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_root);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0 || _la==T__3 || _la==T__73 || _la==ID) {
				{
				setState(64);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(58);
					num_constant_def();
					}
					break;
				case 2:
					{
					setState(59);
					string_constant_def();
					}
					break;
				case 3:
					{
					setState(60);
					type_definition();
					}
					break;
				case 4:
					{
					setState(61);
					param_type_definition();
					}
					break;
				case 5:
					{
					setState(62);
					typedef_instance();
					}
					break;
				case 6:
					{
					setState(63);
					register_set_def();
					}
					break;
				}
				}
				setState(68);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(69);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Num_constant_defContext extends ParserRuleContext {
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public StrContext str() {
			return getRuleContext(StrContext.class,0);
		}
		public TerminalNode LBRACE() { return getToken(JSpecParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(JSpecParser.RBRACE, 0); }
		public TerminalNode SEMI() { return getToken(JSpecParser.SEMI, 0); }
		public Integer_constant_assignContext integer_constant_assign() {
			return getRuleContext(Integer_constant_assignContext.class,0);
		}
		public List<Width_constant_assignContext> width_constant_assign() {
			return getRuleContexts(Width_constant_assignContext.class);
		}
		public Width_constant_assignContext width_constant_assign(int i) {
			return getRuleContext(Width_constant_assignContext.class,i);
		}
		public Num_constant_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_num_constant_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSpecListener ) ((JSpecListener)listener).enterNum_constant_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSpecListener ) ((JSpecListener)listener).exitNum_constant_def(this);
		}
	}

	public final Num_constant_defContext num_constant_def() throws RecognitionException {
		Num_constant_defContext _localctx = new Num_constant_defContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_num_constant_def);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			match(T__0);
			setState(72);
			id();
			setState(73);
			str();
			setState(74);
			match(LBRACE);
			setState(81);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(75);
				integer_constant_assign();
				}
				break;
			case 2:
				{
				setState(77); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(76);
					width_constant_assign();
					}
					}
					setState(79); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==T__1 || _la==T__2 || _la==ID );
				}
				break;
			}
			setState(83);
			match(RBRACE);
			setState(84);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Integer_constant_assignContext extends ParserRuleContext {
		public ArrayContext array() {
			return getRuleContext(ArrayContext.class,0);
		}
		public TerminalNode EQ() { return getToken(JSpecParser.EQ, 0); }
		public Num_expressionContext num_expression() {
			return getRuleContext(Num_expressionContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(JSpecParser.SEMI, 0); }
		public Integer_constant_assignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_integer_constant_assign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSpecListener ) ((JSpecListener)listener).enterInteger_constant_assign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSpecListener ) ((JSpecListener)listener).exitInteger_constant_assign(this);
		}
	}

	public final Integer_constant_assignContext integer_constant_assign() throws RecognitionException {
		Integer_constant_assignContext _localctx = new Integer_constant_assignContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_integer_constant_assign);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			match(T__1);
			setState(87);
			array();
			setState(88);
			match(EQ);
			setState(89);
			num_expression(0);
			setState(90);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Width_constant_assignContext extends ParserRuleContext {
		public ArrayContext array() {
			return getRuleContext(ArrayContext.class,0);
		}
		public List<TerminalNode> LBRACE() { return getTokens(JSpecParser.LBRACE); }
		public TerminalNode LBRACE(int i) {
			return getToken(JSpecParser.LBRACE, i);
		}
		public List<TerminalNode> RBRACE() { return getTokens(JSpecParser.RBRACE); }
		public TerminalNode RBRACE(int i) {
			return getToken(JSpecParser.RBRACE, i);
		}
		public TerminalNode SEMI() { return getToken(JSpecParser.SEMI, 0); }
		public List<IdContext> id() {
			return getRuleContexts(IdContext.class);
		}
		public IdContext id(int i) {
			return getRuleContext(IdContext.class,i);
		}
		public StrContext str() {
			return getRuleContext(StrContext.class,0);
		}
		public Width_constant_assignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_width_constant_assign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSpecListener ) ((JSpecListener)listener).enterWidth_constant_assign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSpecListener ) ((JSpecListener)listener).exitWidth_constant_assign(this);
		}
	}

	public final Width_constant_assignContext width_constant_assign() throws RecognitionException {
		Width_constant_assignContext _localctx = new Width_constant_assignContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_width_constant_assign);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			switch (_input.LA(1)) {
			case T__2:
				{
				setState(92);
				match(T__2);
				setState(93);
				array();
				setState(94);
				match(LBRACE);
				setState(98);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << T__16) | (1L << T__17) | (1L << T__18) | (1L << T__19) | (1L << T__20) | (1L << T__21) | (1L << T__22) | (1L << T__23) | (1L << T__24) | (1L << T__25) | (1L << T__26) | (1L << T__27) | (1L << T__28) | (1L << T__29) | (1L << T__30) | (1L << T__31) | (1L << T__32) | (1L << T__33) | (1L << T__34) | (1L << T__35) | (1L << T__36) | (1L << T__37) | (1L << T__38) | (1L << T__39) | (1L << T__40) | (1L << T__41) | (1L << T__42) | (1L << T__43) | (1L << T__44) | (1L << T__45) | (1L << T__46) | (1L << T__47) | (1L << T__48) | (1L << T__49) | (1L << T__50) | (1L << T__51) | (1L << T__52) | (1L << T__53) | (1L << T__54) | (1L << T__55) | (1L << T__56) | (1L << T__57) | (1L << T__58) | (1L << T__59) | (1L << T__60) | (1L << T__61) | (1L << T__62))) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & ((1L << (T__63 - 64)) | (1L << (T__64 - 64)) | (1L << (T__65 - 64)) | (1L << (T__66 - 64)) | (1L << (T__67 - 64)) | (1L << (T__68 - 64)) | (1L << (T__69 - 64)) | (1L << (T__70 - 64)) | (1L << (T__71 - 64)) | (1L << (T__72 - 64)) | (1L << (T__73 - 64)) | (1L << (T__74 - 64)) | (1L << (T__75 - 64)) | (1L << (T__76 - 64)) | (1L << (T__77 - 64)) | (1L << (T__78 - 64)) | (1L << (WS - 64)) | (1L << (SL_COMMENT - 64)) | (1L << (ML_COMMENT - 64)) | (1L << (ID - 64)) | (1L << (USER_PARAMETER - 64)) | (1L << (NUM - 64)) | (1L << (JSTR - 64)) | (1L << (STR - 64)) | (1L << (LJQUOTE - 64)) | (1L << (RJQUOTE - 64)) | (1L << (LSHIFT - 64)) | (1L << (RSHIFT - 64)) | (1L << (LSQ - 64)) | (1L << (RSQ - 64)) | (1L << (LPAREN - 64)) | (1L << (RPAREN - 64)) | (1L << (AT - 64)) | (1L << (OR - 64)) | (1L << (AND - 64)) | (1L << (SEMI - 64)) | (1L << (COLON - 64)) | (1L << (COMMA - 64)) | (1L << (DOT - 64)) | (1L << (STAR - 64)) | (1L << (EQ - 64)) | (1L << (PLUS - 64)) | (1L << (MINUS - 64)) | (1L << (DIV - 64)) | (1L << (EXP - 64)) | (1L << (DOLLAR - 64)))) != 0)) {
					{
					{
					setState(95);
					_la = _input.LA(1);
					if ( _la <= 0 || (_la==LBRACE || _la==RBRACE) ) {
					_errHandler.recoverInline(this);
					} else {
						consume();
					}
					}
					}
					setState(100);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(101);
				match(RBRACE);
				setState(102);
				match(SEMI);
				}
				break;
			case T__1:
				{
				setState(104);
				match(T__1);
				setState(105);
				id();
				setState(106);
				array();
				setState(107);
				str();
				setState(108);
				match(SEMI);
				}
				break;
			case ID:
				{
				setState(110);
				id();
				setState(112);
				_la = _input.LA(1);
				if (_la==ID) {
					{
					setState(111);
					id();
					}
				}

				setState(115);
				_la = _input.LA(1);
				if (_la==STR) {
					{
					setState(114);
					str();
					}
				}

				setState(117);
				match(SEMI);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class String_constant_defContext extends ParserRuleContext {
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public StrContext str() {
			return getRuleContext(StrContext.class,0);
		}
		public TerminalNode LBRACE() { return getToken(JSpecParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(JSpecParser.RBRACE, 0); }
		public TerminalNode SEMI() { return getToken(JSpecParser.SEMI, 0); }
		public List<Bracket_pairContext> bracket_pair() {
			return getRuleContexts(Bracket_pairContext.class);
		}
		public Bracket_pairContext bracket_pair(int i) {
			return getRuleContext(Bracket_pairContext.class,i);
		}
		public String_constant_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_string_constant_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSpecListener ) ((JSpecListener)listener).enterString_constant_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSpecListener ) ((JSpecListener)listener).exitString_constant_def(this);
		}
	}
